--- a/microservicecloud-myconfig-dept-client.yml
+++ b/microservicecloud-myconfig-dept-client.yml
@@ -13,7 +13,7 @@ spring:
    datasource:
     type: com.alibaba.druid.pool.DruidDataSource            # 当前数据源操作类型
     driver-class-name: org.gjt.mm.mysql.Driver              # mysql驱动包
-    url: jdbc:mysql://localhost:3306/cloudDB03              # 数据库名称
+    url: jdbc:mysql://localhost:3306/clouddb03              # 数据库名称
     username: root
     password: password
     dbcp2:
@@ -46,7 +46,7 @@ spring:
    datasource:
     type: com.alibaba.druid.pool.DruidDataSource            # 当前数据源操作类型
     driver-class-name: org.gjt.mm.mysql.Driver              # mysql驱动包
-    url: jdbc:mysql://localhost:3306/cloudDB02              # 数据库名称
+    url: jdbc:mysql://localhost:3306/clouddb02              # 数据库名称
     username: root
     password: password
     dbcp2:
